# SAR-Drones-MSc-Thesis

./: .gitignore  AEROSTACK2_INSIGHTS.md  AIRSIM_NATIVE_SOLUTION.md  ARCHITECTURE_COMPARISON.md  CLAUDE.md  MANUAL_PATTERN_TESTING.md  PATTERN_EXECUTION_PROBLEM.txt  PATTERN_MAP_GUIDE.md  PATTERN_SOLUTION_SUMMARY.md  README.md  START_COORDINATE_TEST.sh  TERMINAL_COMMANDS.md  TEST_COORDINATED_NOW.sh  airsim_new_environment_guide.md  as2_integration_plan.md  build_system.sh  debug_pattern_system.sh  debug_position_flow.sh  diagnose_coordinates.py  diagnose_movement.sh  executor_comparison_fixed.sh  executor_shootout.sh  fix_unreal_zen.sh  launch_advanced_system.sh  launch_complete_pattern_system.sh  launch_complete_system.sh  launch_drone_map.sh  launch_hybrid_system.sh  launch_minimal_for_patterns.sh  launch_pattern_monitor.sh  launch_position_only.sh  launch_practical_system.sh  launch_sar_system.sh  launch_visualizer.sh  launch_with_vision.sh  launch_with_web.sh  monitor_rth.sh  monitor_velocity.sh  pattern_control_center.sh  pattern_executor_comparison.sh  (+44 more)
Updates/: AUGUST_3_SESSION_3_SUMMARY.md  (+9 more)
ros2_ws/src/drone_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/drone_interfaces/action/: ExecuteMission.action  NavigateToGoal.action
ros2_ws/src/drone_interfaces/msg/: DetectedObject.msg  DroneState.msg  LLMCommand.msg  MissionStatus.msg  Obstacle.msg  ObstacleArray.msg  SceneDescription.msg  SearchPattern.msg  Waypoint.msg  WaypointList.msg
ros2_ws/src/drone_interfaces/srv/: ArmDrone.srv  EmergencyStop.srv  GetSceneDescription.srv  SetMission.srv  TakeoffLand.srv
(+164 files in other folders)
